# nanoLoop

./: .env.example  .gitignore  README.md  policy.yaml  pyproject.toml  run.sh
Skills/agentvcs-merge/: SKILL.md
Skills/scaffold-fastapi/: SKILL.md
harness/: __init__.py  agents.py  main.py  model.py  roles.py  tools.py
nanoloop/: __init__.py  __main__.py  agents.py  frontmatter.py  main.py  memory.py  reconcile.py  roles.py  session.py  skills.py  tools.py
tests/: test_memory.py  test_reconcile.py  test_session.py  test_skills.py  test_tools.py
