[project]
name = "custom-hardness"
version = "0.1.0"
description = "Autonomous startup-task harness: OpenRouter model + LangChain DeepAgents + NVIDIA OpenShell sandbox. Gstack-inspired role workflow."
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
hardness = "harness.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]
