[project]
name = "nanoloop"
version = "0.1.0"
description = "Tiny autonomous engineering harness: OpenRouter model + LangChain DeepAgents + NVIDIA OpenShell sandbox. Gstack-inspired Plan->Build->Review->Test->Ship loop with session memory and optional human-in-the-loop gates."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ismael Faro", email = "ismael.faro.sertage@gmail.com" }]
keywords = ["agents", "llm", "deepagents", "openrouter", "openshell", "autonomous", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "deepagents>=0.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.0", "twine>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/ismaelfaro/nanoLoop"
Repository = "https://github.com/ismaelfaro/nanoLoop"
Issues = "https://github.com/ismaelfaro/nanoLoop/issues"

[project.scripts]
nanoloop = "nanoloop.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanoloop"]

[tool.hatch.build.targets.sdist]
include = ["nanoloop", "tests", "Skills", "README.md", "LICENSE", "policy.yaml", ".env.example"]
